--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ h2==3.2.0
 hpack==3.0.0
 hstspreload==2024.7.1
 httpcore==1.0.5
-httpx==0.27.0
+httpx>=0.13.3
 hyperframe==5.2.0
 idna==3.7
 jikanpy-v4==1.0.2
